/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/GUIForms/JFrame.java to edit this template
 */
package dragonballgame;

import java.awt.Image;
import java.util.Random;
import javax.swing.ImageIcon;
import javax.swing.JLabel;
import javax.swing.JOptionPane;

/**
 *
 * @author polenzani.pietro
 */
public class GameInteface extends javax.swing.JFrame {
    
    Player player = new Player();
    GameManager gameManager = new GameManager();
    private String imagePath;
    GameSaver gameSaver;

    /**
     * Creates new form GameInteface
     */
    public GameInteface() {
        initComponents();
        this.btn_attack.setEnabled(false);
        this.btn_specialAttack.setEnabled(false);
        this.lbl_enemyHp.setVisible(false);
        this.jLabel6.setVisible(false);
    }

    public void setImage(String path) {
    pnl_image.removeAll(); 
    this.imagePath = path;
    ImageIcon icon = new ImageIcon(imagePath);
    Image img = icon.getImage().getScaledInstance(pnl_image.getWidth(),pnl_image.getHeight(),Image.SCALE_SMOOTH);
    JLabel label = new JLabel(new ImageIcon(img));
    pnl_image.add(label);
    pnl_image.revalidate();
    pnl_image.repaint();
}

    public void setEnemyImage(String path) {
        pnl_enemy.removeAll();
        this.imagePath = path;
        ImageIcon icon = new ImageIcon(imagePath);
        Image img = icon.getImage().getScaledInstance(pnl_enemy.getWidth(), pnl_enemy.getHeight(), Image.SCALE_SMOOTH);
        JLabel label = new JLabel(new ImageIcon(img));
        pnl_enemy.add(label);
        pnl_enemy.revalidate();
        pnl_enemy.repaint();
    }

    public void setCharacter(Character c) {
    this.gameManager.setCharacter(c);
    if (this.gameManager.getCharacter() != null) {
        updateStats(this.gameManager.getCharacter()); 
    }
    if (c.transformation && c.getSpecialImagePath() != null && !c.getSpecialImagePath().isEmpty()) {
        setImage(c.getSpecialImagePath());
    } else if (c.getImagePath() != null && !c.getImagePath().isEmpty()) {
        setImage(c.getImagePath());
    }
}

    public void updateStats(Character c) {
        lbl_hp.setText(String.valueOf(c.getHp()));
        lbl_stamina.setText(String.valueOf(c.getStamina()));
        lbl_aura.setText(String.valueOf(c.getAura()));
        lbl_att.setText(String.valueOf(c.getAtt()));
        lbl_dragonBalls.setText(String.valueOf(c.getBalls()));
    }

    public void setUsername(String username) {
        lbl_username.setText(username);
        lbl_username.invalidate();
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        jPanel1 = new javax.swing.JPanel();
        jLabel1 = new javax.swing.JLabel();
        lbl_hp = new javax.swing.JLabel();
        jLabel2 = new javax.swing.JLabel();
        lbl_stamina = new javax.swing.JLabel();
        jLabel3 = new javax.swing.JLabel();
        lbl_aura = new javax.swing.JLabel();
        jLabel4 = new javax.swing.JLabel();
        lbl_dragonBalls = new javax.swing.JLabel();
        jLabel5 = new javax.swing.JLabel();
        lbl_att = new javax.swing.JLabel();
        btn_nextRound = new javax.swing.JButton();
        pnl_image = new javax.swing.JPanel();
        lbl_username = new javax.swing.JLabel();
        jScrollPane1 = new javax.swing.JScrollPane();
        txt_events = new javax.swing.JTextArea();
        btn_attack = new javax.swing.JButton();
        btn_specialAttack = new javax.swing.JButton();
        btn_specilability = new javax.swing.JButton();
        pnl_enemy = new javax.swing.JPanel();
        btn_saveCSV = new javax.swing.JButton();
        btn_saveBinary = new javax.swing.JButton();
        jLabel6 = new javax.swing.JLabel();
        jLabel7 = new javax.swing.JLabel();
        lbl_enemyHp = new javax.swing.JLabel();

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
        getContentPane().setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());

        jPanel1.setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());

        jLabel1.setText(" hp:");
        jPanel1.add(jLabel1, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 40, -1, -1));

        lbl_hp.setText("0");
        jPanel1.add(lbl_hp, new org.netbeans.lib.awtextra.AbsoluteConstraints(30, 40, -1, -1));

        jLabel2.setText(" stamina:");
        jPanel1.add(jLabel2, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 80, -1, -1));

        lbl_stamina.setText("0");
        jPanel1.add(lbl_stamina, new org.netbeans.lib.awtextra.AbsoluteConstraints(60, 80, 100, 20));

        jLabel3.setText(" aura");
        jPanel1.add(jLabel3, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 120, -1, -1));

        lbl_aura.setText("0");
        jPanel1.add(lbl_aura, new org.netbeans.lib.awtextra.AbsoluteConstraints(40, 120, 40, -1));

        jLabel4.setText(" dragonBalls");
        jPanel1.add(jLabel4, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 160, -1, -1));

        lbl_dragonBalls.setText("0");
        jPanel1.add(lbl_dragonBalls, new org.netbeans.lib.awtextra.AbsoluteConstraints(80, 160, 20, -1));

        jLabel5.setText(" att");
        jPanel1.add(jLabel5, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 200, -1, -1));

        lbl_att.setText("0");
        jPanel1.add(lbl_att, new org.netbeans.lib.awtextra.AbsoluteConstraints(40, 200, 50, -1));

        getContentPane().add(jPanel1, new org.netbeans.lib.awtextra.AbsoluteConstraints(10, 20, 210, 220));

        btn_nextRound.setText("CONTINUE");
        btn_nextRound.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_nextRoundActionPerformed(evt);
            }
        });
        getContentPane().add(btn_nextRound, new org.netbeans.lib.awtextra.AbsoluteConstraints(40, 780, 170, 60));
        getContentPane().add(pnl_image, new org.netbeans.lib.awtextra.AbsoluteConstraints(20, 310, 220, 410));

        lbl_username.setFont(new java.awt.Font("Segoe UI", 0, 36)); // NOI18N
        lbl_username.setText("PLAYER 1");
        getContentPane().add(lbl_username, new org.netbeans.lib.awtextra.AbsoluteConstraints(250, 150, 250, 50));

        txt_events.setEditable(false);
        txt_events.setColumns(20);
        txt_events.setRows(5);
        jScrollPane1.setViewportView(txt_events);

        getContentPane().add(jScrollPane1, new org.netbeans.lib.awtextra.AbsoluteConstraints(780, 0, 370, 860));

        btn_attack.setText("ATTACK");
        btn_attack.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_attackActionPerformed(evt);
            }
        });
        getContentPane().add(btn_attack, new org.netbeans.lib.awtextra.AbsoluteConstraints(240, 780, 160, 60));

        btn_specialAttack.setText("SPECIAL ATTACK");
        btn_specialAttack.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_specialAttackActionPerformed(evt);
            }
        });
        getContentPane().add(btn_specialAttack, new org.netbeans.lib.awtextra.AbsoluteConstraints(432, 780, 150, 60));

        btn_specilability.setText("SPECIAL ABILITY");
        btn_specilability.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_specilabilityActionPerformed(evt);
            }
        });
        getContentPane().add(btn_specilability, new org.netbeans.lib.awtextra.AbsoluteConstraints(610, 780, 160, 60));
        getContentPane().add(pnl_enemy, new org.netbeans.lib.awtextra.AbsoluteConstraints(520, 360, 250, 330));

        btn_saveCSV.setText("SAVE CSV");
        btn_saveCSV.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_saveCSVActionPerformed(evt);
            }
        });
        getContentPane().add(btn_saveCSV, new org.netbeans.lib.awtextra.AbsoluteConstraints(230, 10, 140, -1));

        btn_saveBinary.setText("SAVE BINARY");
        btn_saveBinary.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_saveBinaryActionPerformed(evt);
            }
        });
        getContentPane().add(btn_saveBinary, new org.netbeans.lib.awtextra.AbsoluteConstraints(380, 10, 150, -1));

        jLabel6.setText("hp:");
        getContentPane().add(jLabel6, new org.netbeans.lib.awtextra.AbsoluteConstraints(550, 320, -1, -1));
        getContentPane().add(jLabel7, new org.netbeans.lib.awtextra.AbsoluteConstraints(580, 320, -1, -1));

        lbl_enemyHp.setText("jLabel8");
        getContentPane().add(lbl_enemyHp, new org.netbeans.lib.awtextra.AbsoluteConstraints(580, 320, -1, -1));

        pack();
    }// </editor-fold>//GEN-END:initComponents

    private void btn_nextRoundActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_nextRoundActionPerformed
        Events.event ev = gameManager.eventSelection();
        txt_events.setText(txt_events.getText() + "\n" + ev);
        updateStats(gameManager.getCharacter());
        if (ev.equals(Events.event.enemyAppear)) {
        btn_attack.setEnabled(true);
        btn_nextRound.setEnabled(false);
        Enemy enemy = gameManager.getCurrentEnemy();
        EnemiesNames e = enemy.getName();
        lbl_enemyHp.setVisible(true);
        jLabel6.setVisible(true);
        lbl_enemyHp.setText("" + enemy.getHp());
            switch (e) {
                case broly:
                    this.setEnemyImage("immagini/broly.png");
                    break;
                case janemba:
                    this.setEnemyImage("immagini/janemba.png");
                    break;
                case friezer:
                    this.setEnemyImage("immagini/freezer.png");
                    break;
                case majinBuu:
                    this.setEnemyImage("immagini/superBuu.png");
                    break;
                case cell:
                    this.setEnemyImage("immagini/cell.png");
                    break;
                case grottelli:
                    this.setEnemyImage("immagini/grottelliMalvagio.png");
                    break;
                default:
                    break;
            }

        }
        if (gameManager.getBalls() == 7) {
            JOptionPane.showMessageDialog(this, "YOU'VE FOUND ALL THE DRAGON BALLS, CONGRATULATIONS!!! YOUR MISSION IS COMPLETED, FOR NOW...");
            dispose();
        }
        if (gameManager.getTransformation() == false) {
            this.btn_specilability.setEnabled(true);
        }
    }//GEN-LAST:event_btn_nextRoundActionPerformed

    private void btn_attackActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_attackActionPerformed
        gameManager.attack(gameManager.getCurrentEnemy());
        updateStats(gameManager.getCharacter());
        this.lbl_enemyHp.setText("" + gameManager.getCurrentEnemy().getHp());
        if (this.gameManager.getCharacter().getStamina() == 0) {
            this.btn_attack.setEnabled(false);
        }
        if (gameManager.getCharacter().getHp() == 0) {
            JOptionPane.showMessageDialog(this, "YOU'RE DEAD, YOU'VE FAILED YOUR MISSION, AND THE MIGHTY ENEMY HAS CONQUERED THE EARTH, JUST FOR YOUR WEAKNESS...");
            dispose();
        }
        if (gameManager.getCurrentEnemy().getHp() <= 0) {
            this.pnl_enemy.removeAll();
            this.pnl_enemy.revalidate();
            this.pnl_enemy.repaint();
            this.lbl_enemyHp.setVisible(false);
            this.jLabel6.setVisible(false);
            this.btn_attack.setEnabled(false);
            this.btn_specialAttack.setEnabled(false);
            this.btn_nextRound.setEnabled(true); 
        }
    }//GEN-LAST:event_btn_attackActionPerformed

    private void btn_specialAttackActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_specialAttackActionPerformed
        gameManager.specialAttack(gameManager.getCurrentEnemy());
        updateStats(gameManager.getCharacter());
        this.btn_specilability.setEnabled(true);
        this.pnl_enemy.removeAll();
        this.pnl_enemy.revalidate();
        this.pnl_enemy.repaint();
        this.lbl_enemyHp.setVisible(false);
        this.jLabel6.setVisible(false);
        this.btn_attack.setEnabled(false);
        this.pnl_image.removeAll();
        this.setImage(gameManager.getCharacter().getImagePath());
        this.btn_nextRound.setEnabled(true); 
    }//GEN-LAST:event_btn_specialAttackActionPerformed

    private void btn_specilabilityActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_specilabilityActionPerformed
        gameManager.specialAbility();
        updateStats(gameManager.getCharacter());
        if (gameManager.getCharacter().transformation == true) {
            this.btn_specialAttack.setEnabled(true);
        }
        this.btn_specilability.setEnabled(false);
        if (gameManager.getCharacter() instanceof Goku) {
            this.setImage(gameManager.getCharacter().getSpecialImagePath());
        } else if (gameManager.getCharacter() instanceof Gohan) {
            this.setImage(gameManager.getCharacter().getSpecialImagePath());
        } else if (gameManager.getCharacter() instanceof Vegeta) {
            this.setImage(gameManager.getCharacter().getSpecialImagePath());
        }


    }//GEN-LAST:event_btn_specilabilityActionPerformed

    private void btn_saveCSVActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_saveCSVActionPerformed
        GameSaver.setData(this.gameManager.getCharacter(), this.player);
        gameSaver.saveCSV();
    }//GEN-LAST:event_btn_saveCSVActionPerformed

    private void btn_saveBinaryActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_saveBinaryActionPerformed
        GameSaver.setData(this.gameManager.getCharacter(), this.player);
        gameSaver.saveBinary();
    }//GEN-LAST:event_btn_saveBinaryActionPerformed

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton btn_attack;
    private javax.swing.JButton btn_nextRound;
    private javax.swing.JButton btn_saveBinary;
    private javax.swing.JButton btn_saveCSV;
    private javax.swing.JButton btn_specialAttack;
    private javax.swing.JButton btn_specilability;
    private javax.swing.JLabel jLabel1;
    private javax.swing.JLabel jLabel2;
    private javax.swing.JLabel jLabel3;
    private javax.swing.JLabel jLabel4;
    private javax.swing.JLabel jLabel5;
    private javax.swing.JLabel jLabel6;
    private javax.swing.JLabel jLabel7;
    private javax.swing.JPanel jPanel1;
    private javax.swing.JScrollPane jScrollPane1;
    private javax.swing.JLabel lbl_att;
    private javax.swing.JLabel lbl_aura;
    private javax.swing.JLabel lbl_dragonBalls;
    private javax.swing.JLabel lbl_enemyHp;
    private javax.swing.JLabel lbl_hp;
    private javax.swing.JLabel lbl_stamina;
    private javax.swing.JLabel lbl_username;
    private javax.swing.JPanel pnl_enemy;
    private javax.swing.JPanel pnl_image;
    private javax.swing.JTextArea txt_events;
    // End of variables declaration//GEN-END:variables
}
