/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/GUIForms/JFrame.java to edit this template
 */
package dragonballgame;

import javax.swing.JOptionPane;

/**
 *
 * @author polenzani.pietro
 */
public class StarterForm extends javax.swing.JFrame {

    /**
     * Creates new form StarterForm
     */
    GameInteface g = new GameInteface();
    CharacterSelection c;
    Player player = new Player();

    public StarterForm() {
        initComponents();
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        jLabel1 = new javax.swing.JLabel();
        btn_newGame = new javax.swing.JButton();
        btn_loadCSV = new javax.swing.JButton();
        btn_loadBinary = new javax.swing.JButton();
        jLabel2 = new javax.swing.JLabel();
        fld_username = new javax.swing.JTextField();
        btn_send = new javax.swing.JButton();
        btn_istruction = new javax.swing.JButton();

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
        getContentPane().setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());

        jLabel1.setFont(new java.awt.Font("Yu Gothic Medium", 3, 32)); // NOI18N
        jLabel1.setForeground(new java.awt.Color(255, 0, 51));
        jLabel1.setText("WELCOME TO DRAGONBALL GAME");
        getContentPane().add(jLabel1, new org.netbeans.lib.awtextra.AbsoluteConstraints(10, -10, 580, 150));

        btn_newGame.setFont(new java.awt.Font("Yu Gothic Medium", 3, 36)); // NOI18N
        btn_newGame.setText("NEW GAME");
        btn_newGame.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_newGameActionPerformed(evt);
            }
        });
        getContentPane().add(btn_newGame, new org.netbeans.lib.awtextra.AbsoluteConstraints(20, 390, 560, 70));

        btn_loadCSV.setText("LOAD CSV");
        btn_loadCSV.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_loadCSVActionPerformed(evt);
            }
        });
        getContentPane().add(btn_loadCSV, new org.netbeans.lib.awtextra.AbsoluteConstraints(10, 300, 190, 60));

        btn_loadBinary.setText("LOAD BINARY");
        btn_loadBinary.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_loadBinaryActionPerformed(evt);
            }
        });
        getContentPane().add(btn_loadBinary, new org.netbeans.lib.awtextra.AbsoluteConstraints(410, 300, 180, 60));

        jLabel2.setText("USERNAME:");
        getContentPane().add(jLabel2, new org.netbeans.lib.awtextra.AbsoluteConstraints(10, 170, 100, 30));

        fld_username.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                fld_usernameActionPerformed(evt);
            }
        });
        getContentPane().add(fld_username, new org.netbeans.lib.awtextra.AbsoluteConstraints(10, 200, 90, -1));

        btn_send.setText("SEND");
        btn_send.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_sendActionPerformed(evt);
            }
        });
        getContentPane().add(btn_send, new org.netbeans.lib.awtextra.AbsoluteConstraints(110, 200, -1, -1));

        btn_istruction.setText("ISTRUCTION");
        btn_istruction.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_istructionActionPerformed(evt);
            }
        });
        getContentPane().add(btn_istruction, new org.netbeans.lib.awtextra.AbsoluteConstraints(60, 470, 480, 60));

        pack();
    }// </editor-fold>//GEN-END:initComponents

    private void btn_newGameActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_newGameActionPerformed
        dispose();
        if (c == null) {
            c = new CharacterSelection(g);
        }
        c.setVisible(true);
    }//GEN-LAST:event_btn_newGameActionPerformed

    private void btn_loadCSVActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_loadCSVActionPerformed
        GameSaver.loadCSV();
        if (GameSaver.getCharacter() != null && GameSaver.getPlayer() != null) {
            g.setUsername(GameSaver.getPlayer().getName());
            g.setCharacter(GameSaver.getCharacter());
            g.setVisible(true);
            this.dispose();
        }
        
    }//GEN-LAST:event_btn_loadCSVActionPerformed

    private void btn_loadBinaryActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_loadBinaryActionPerformed
        GameSaver.loadBinary();
        g.setCharacter(GameSaver.getCharacter());
        g.setUsername(GameSaver.getPlayer().getName());
        g.setVisible(true);
        this.dispose();
    }//GEN-LAST:event_btn_loadBinaryActionPerformed

    private void fld_usernameActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_fld_usernameActionPerformed
        // TODO add your handling code here:
    }//GEN-LAST:event_fld_usernameActionPerformed

    private void btn_sendActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_sendActionPerformed
        String username = fld_username.getText().toUpperCase();
        player.setName(username);
        g.setUsername(username);
    }//GEN-LAST:event_btn_sendActionPerformed

    private void btn_istructionActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_istructionActionPerformed
        JOptionPane.showMessageDialog(this, "WELCOME WARRIOR, CHOOSE YOUR TRAVEL COMPANION BETWEEN GOKU, GOHAN OR VEGETA, IN SEARCH OF THE 7 DRAGON BALLS. \n DURING THE JOURNEY YOU WILL ENCOUNTER MANY CRUEL ENEMIES BUT YOU WILL HAVE THE OPPORTUNITY TO TRAIN AND HEAL YOURSELF, AND WHO KNOWS, MAYBE YOU WILL DISCOVER YOUR HIDDEN STRENGTH...");
    }//GEN-LAST:event_btn_istructionActionPerformed

    /**
     * @param args the command line arguments
     */

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton btn_istruction;
    private javax.swing.JButton btn_loadBinary;
    private javax.swing.JButton btn_loadCSV;
    private javax.swing.JButton btn_newGame;
    private javax.swing.JButton btn_send;
    private javax.swing.JTextField fld_username;
    private javax.swing.JLabel jLabel1;
    private javax.swing.JLabel jLabel2;
    // End of variables declaration//GEN-END:variables
}
